--- a/Robot/Source/Robot/platformio.ini
+++ b/Robot/Source/Robot/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = qub1750ul/L293@^4.0.2
+lib_deps = 
+	qub1750ul/L293@^4.0.2
+	teckel12/NewPing@^1.9.1
